Issues with wrap & direction with paragraph blocks

--- a/src/blocks/container/editor.lazy.scss
+++ b/src/blocks/container/editor.lazy.scss
@@ -84,10 +84,6 @@
 			}
 		}
 	}
-
-	.wp-block-paragraph {
-		width: 100%;
-	}
 }
 
 .block-editor-block-list__empty-block-inserter .block-editor-inserter {
